[project]
name = "Python3-JsonEngine"
version = "0.1.0"
description = "JSON utilities for async, concurrent, and process-based workflows."
authors = [{ name = "JigarPandya", email = "ultijigar@gmail.com" }]
dependencies = ["aiofiles"]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
